// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderAlert is rendered 1`] = `
<article
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  class="euiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiHeaderAlert__date"
      >
        date
      </div>
    </div>
  </div>
  <h3
    class="euiHeaderAlert__title"
    id="generated-id-title"
  >
    title
  </h3>
  <div
    class="euiHeaderAlert__text"
  />
</article>
`;

exports[`EuiHeaderAlert renders action 1`] = `
<article
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  class="euiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiHeaderAlert__date"
      >
        date
      </div>
    </div>
  </div>
  <h3
    class="euiHeaderAlert__title"
    id="generated-id-title"
  >
    title
  </h3>
  <div
    class="euiHeaderAlert__text"
  />
  <div
    class="euiHeaderAlert__action euiLink"
  >
    <button>
      Quietly take to the ship
    </button>
  </div>
</article>
`;

exports[`EuiHeaderAlert renders date as an element 1`] = `
<article
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  class="euiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiHeaderAlert__date"
      >
        <h2>
          October 18, 1851
        </h2>
      </div>
    </div>
  </div>
  <h3
    class="euiHeaderAlert__title"
    id="generated-id-title"
  >
    shazm
  </h3>
  <div
    class="euiHeaderAlert__text"
  />
</article>
`;

exports[`EuiHeaderAlert renders title as an element 1`] = `
<article
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  class="euiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiHeaderAlert__date"
      >
        date
      </div>
    </div>
  </div>
  <h3
    class="euiHeaderAlert__title"
    id="generated-id-title"
  />
  <h2>
    Circumambulate the city
  </h2>
  <div
    class="euiHeaderAlert__text"
  />
</article>
`;
